--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18.16.19",
-    "nuxt": "^3.6.3"
+    "nuxt": "^3.6.3",
+    "unplugin-fonts": "^1.0.3"
+  },
+  "dependencies": {
+    "@fontsource/plus-jakarta-sans": "^5.0.3",
+    "sass": "^1.64.1",
+    "vue-composable": "^1.0.0-beta.24"
   }
 }
