--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "preview": "cross-env PORT=8001 node .output/server/index.mjs",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
@@ -15,7 +15,6 @@
     "unplugin-fonts": "^1.0.3"
   },
   "dependencies": {
-    "@fontsource/plus-jakarta-sans": "^5.0.3",
     "sass": "^1.64.1",
     "vue-composable": "^1.0.0-beta.24"
   }
