--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "unplugin-fonts": "^1.0.3"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.19",
     "sass": "^1.64.1",
     "vue-composable": "^1.0.0-beta.24"
   }
