--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.19",
+    "gsap": "^3.12.2",
     "sass": "^1.64.1",
     "vue-composable": "^1.0.0-beta.24"
   }
