--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "yusrmuttaqien-site",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.19",
+    "@vueuse/components": "^10.5.0",
+    "@vueuse/core": "^10.5.0",
     "gsap": "^3.12.2",
     "sass": "^1.64.1",
     "vue-composable": "^1.0.0-beta.24"
