--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@hypernym/nuxt-gsap": "^2.4.2",
     "@nuxt/devtools": "latest",
+    "@nuxt/image": "^1.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.1.3",
     "nuxt": "^3.8.2",
     "sass": "^1.69.5",
     "vue": "^3.3.12",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@studio-freight/lenis": "^1.0.33"
   }
 }
