--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
+    "fluid-tailwind": "^0.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
