--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-variants": "^0.2.0"
+    "tailwind-variants": "^0.2.0",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
