--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/react-lenis": "^0.0.45",
     "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.8",
     "next": "14.1.2",
