--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
+    "@sodefa/next-server-context": "^0.0.2",
     "@studio-freight/react-lenis": "^0.0.45",
     "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.8",
+    "negotiator": "^0.6.3",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +22,7 @@
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
