--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@studio-freight/react-lenis": "^0.0.45",
     "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.8",
+    "locale-codes": "^1.3.1",
     "negotiator": "^0.6.3",
     "next": "14.1.2",
     "react": "^18",
