--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "split-type": "^0.3.4",
     "tailwind-variants": "^0.2.0",
     "use-immer": "^0.9.0"
   },
