--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@studio-freight/react-lenis": "^0.0.47",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@vercel/speed-insights": "^1.0.11",
     "framer-motion": "^11.2.6",
     "merge-refs": "^1.3.0",
     "next": "14.2.3",
