--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyriacbr/react-split-text": "^1.0.0",
     "@studio-freight/react-lenis": "^0.0.47",
     "@tailwindcss/container-queries": "^0.1.1",
     "@vercel/analytics": "^1.3.1",
@@ -18,7 +19,6 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "split-type": "^0.3.4",
     "tailwind-variants": "^0.2.1",
     "use-immer": "^0.9.0",
     "zustand": "^4.5.2"
