--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.11",
-    "framer-motion": "^11.2.6",
+    "framer-motion": "11.0.10",
     "merge-refs": "^1.3.0",
     "next": "14.2.3",
     "react": "^18",
