update/chore/add - project package name - Navbar ClockSegment exit easing --- - i18n usage to use currentI18n util - cubicBezier to use new motion constant - move stray string variable to constant --- - routeCache to Navbar NavYM toggle - motion constant EASE_OUT_QUART - closedSource project category - github link to appropriate projects

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yusrmuttaqien-simplified-site",
+  "name": "yusrmuttaqien-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
