--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.4",
     "tailwind-variants": "^0.2.1",
     "use-immer": "^0.9.0",
     "zustand": "^4.5.2"
@@ -35,6 +36,7 @@
     "typescript": "^5"
   },
   "trustedDependencies": [
-    "@vercel/speed-insights"
+    "@vercel/speed-insights",
+    "sharp"
   ]
 }
