--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@cyriacbr/react-split-text": "^1.0.0",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.3",
     "@studio-freight/react-lenis": "^0.0.47",
     "@tailwindcss/container-queries": "^0.1.1",
     "@vercel/analytics": "^1.3.1",
